LJSUP-4426: underline inside banner fixed LJSUP-4427: visible line between banners fixed
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@15267 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/ad_base.css
+++ b/htdocs/stc/ad_base.css
@@ -7,10 +7,11 @@
     color: #444;
     margin: 0;
 }
-.ljad a
+.ljad A:link,
+.ljad A:visited
 {
     font-size: 10px;
-    border: 0;
+    border: 0 !important;
 }
 .ljad img { border: 0; }
 .ljadskyscraper
@@ -38,6 +39,7 @@
     padding: 0;
     display: block;
 }
+.ljadafter-post-a BR,
 .ljadmedrect BR {
     display: none;
 }
